KEdit is deprecated
svn path=/trunk/kdelibs/; revision=136247

--- a/KDE3PORTING.html
+++ b/KDE3PORTING.html
@@ -262,6 +262,10 @@ functionality.
 The WidgetList parameter has been renamed to QWidgetList. Behaviour
 is identical.
 
+<H4>KEdit</H4>
+KEdit is now deprecated. You should use use KTextEditor::Editor or 
+QTextEdit instead.
+
 <H4>KImageEffect</H4>
 KImageEffect has now been moved to the new kdefx library.
 
