--- a/KDE3PORTING.html
+++ b/KDE3PORTING.html
@@ -334,6 +334,10 @@ The protected set* methods have been renamed to update* and they now take only o
 is now updateText(int) ). Because the former second argument was always the value of the a corresponding data member, you
 can simply call the accessor method (i.e. in updateText() call text() to get the text).
 
+<H4>KToggleAction</H4>
+exclusiveGroup() is no more virtual. setExclusiveGroup(const
+QString&) is not a slot anymore.
+
 <H4><P ALIGN="RIGHT"><A HREF="#TOC">Return to the Table of Contents</A></P></H4>
 
 <H3><A NAME="kio">Changes in kio</A></H3>
