--- a/KDE3PORTING.html
+++ b/KDE3PORTING.html
@@ -418,6 +418,9 @@ allowed to fix this dependency problem: KRun can now use the OpenWith dialog dir
 Methods now use KIcon::Group and KIcon::Context instead of int as types for group and context arguments.
 The change should affect only code using hardcoded numeric values instead of using the proper enum constants.
 
+<H4>KFilterDev</H4>
+The createFilterDevice method is deprecated. Use deviceForFile instead. 
+
 <H4><P ALIGN="RIGHT"><A HREF="#TOC">Return to the Table of Contents</A></P></H4>
 
 <H3><A NAME="kparts">Changes in kparts</A></H3>
