--- a/KDE3PORTING.html
+++ b/KDE3PORTING.html
@@ -422,6 +422,18 @@ The change should affect only code using hardcoded numeric values instead of usi
 <H4>KFilterDev</H4>
 The createFilterDevice method is deprecated. Use deviceForFile instead. 
 
+<H4>KDirWatch</H4>
+<ul>
+  <li>The signal fileDirty( const QString&amp; ) has been removed</li>
+  <li>The signal created( const QString&amp; ) has been added</li>
+  <li>The signal deleted( const QString&amp; ) has been added</li>
+  <li>The signal dirty( const QString&amp; ) may be emitted with a file name, not only
+    a directory name. This depends on which backend is used but will probably always be
+    the case in KDE 3.1. You should prepare to receive dirty( dirname ) or dirty( filename )
+    when a file has changed.
+  </li>
+</ul>
+
 <H4><P ALIGN="RIGHT"><A HREF="#TOC">Return to the Table of Contents</A></P></H4>
 
 <H3><A NAME="kparts">Changes in kparts</A></H3>
